--- a/index.html
+++ b/index.html
@@ -3,13 +3,90 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Projects</title>
   </head>
-  <body>
-    <h1>Projects</h1>
-    
-    <script>
+  
+  <style>
+    .bodyStyle {
+      background-image: url('backgroundImg.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
-    </script>
+    .heading {
+      text-align: center;
+      padding: 25px 0 25px 0;
+      color: white;
+    }
+
+    .cardsContainer {
+      text-align: center;
+    }
+
+    .card {
+      background-color: #f7f8fa;
+      padding: 40px;
+      width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 25px;
+      border-width: 2px;
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    }
+
+    .card:hover {
+      box-shadow: 0 10px 15px 0 rgba(29, 29, 29, 0.5);
+    }
+
+    .projName {
+      font-family: "Arial";
+      font-weight: 600;
+      font-size: 20px;
+      text-align: center;
+    }
+
+    .projDesc {
+      font-size: 14px;
+      text-align: center;
+      font-family: "Arial";
+      padding-bottom: 5px;
+      padding-top: 5px;
+    }
+
+    .projTech {
+      font-size: 14px;
+      text-align: center;
+      font-family: "Arial";
+      font-weight: bold;
+      padding-bottom: 5px;
+      padding-top: 5px;
+    }
+
+    .projImg {
+      width: 100%;
+      height: 75%;
+      text-align: center;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 15px;
+      border: 1px solid #555;
+    }
+
+    .repoLink {
+      padding-bottom: 15px;
+    }
+
+    .links {
+      font-size: 16px;
+    }
+
+  </style>
+  
+  <body class="bodyStyle">
+    <h1 class="heading">Projects</h1>
+    <div class="cardsContainer" id="cardsDiv"></div>
+
+    <script src="projects.js"></script>
   </body>
 </html>
