--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Projects</title>
+    <link rel="shortcut icon" type="image/jpg" href="abansa22.png"/>
   </head>
   
   <style>
