--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width">
     <title>Projects</title>
     <link rel="shortcut icon" type="image/jpg" href="abansa22.png"/>
+
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+      window.OneSignal = window.OneSignal || [];
+      OneSignal.push(function() {
+        OneSignal.init({
+          appId: "e9c5c8f8-5d2c-45ce-94f8-8ce7dc73dca1",
+        });
+      });
+    </script>
+
   </head>
   
   <style>
